--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "tespy-user-meeting-2025"
-version = "0.1.0"
-description = "Add your description here"
+version = "1.0"
+description = "Notebooks for the tespy user meeting 2025"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
